tests/miniJava/neg/005235_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] if ( ) { return 0 ; } }
